--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -38,9 +39,11 @@
 }
 
 .item_page {
+  
+  
+  align-items: center;
   text-align: center;
-    align-items: center;
-    color:#61dafb;
+ background-color: aquamarine;
 }
 
 
