--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=Tapestry&display=swap');
+
 .App {
   text-align: center;
   
@@ -44,16 +46,19 @@
   border-radius: 0.5rem;
   align-items: center;
   text-align: center;
- background-color: aquamarine;
+ /* background-color: aquamarine; */
+ background-color: seashell;
+
 }
 
 .home_link {
   align-items: right;
   padding: 0.5rem;
   margin: 0.5rem;
-  border-radius: 0.5rem;padding: 0.5rem;
-  color: pink;
-  background-color: pink;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  color: lavenderblush;
+  background-color: MidnightBlue;
 }
 
 
